# coding-assistant

./: .gitignore  README.md  config.json  init.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
core/agents/: base_agent.py
simulation/templates/: architect_request.yaml  base_context.yaml
src/coding_assistant/core/: logging_config.yaml
src/coding_assistant/core/agents/: architect.py  base_agent.py  config.py
src/coding_assistant/core/context/: cache_manager.py  manager.py  schema.py  validation.py  version_manager.py
src/coding_assistant/core/execution/: parallel_manager.py
src/coding_assistant/core/io/: file_system.py  handler.py  transaction.py
src/coding_assistant/core/recovery/: integration.py  recovery_manager.py
src/coding_assistant/simulation/templates/: base_context.yaml
src/coding_assistant/utils/: logging.py
src/tests/: conftest.py
src/tests/test_core/test_context/: test_cache.py  test_cache_manager.py  test_manager.py
