[metadata]
name = coding-assistant
version = 0.1.0
description = Interactive coding assistant system
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.9
package_dir =
    = src
packages = find:
install_requires =
    pyyaml>=6.0
    python-dotenv>=0.19.0
    gitpython>=3.1.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    black>=22.0.0
    pylint>=2.8.0
    pytest-cov>=2.12.0
    isort>=5.10.0